# FreeRTOS-PlusPlus

./: .gitmodules  CMakeLists.txt  Doxyfile
include/frpp/sys/: frpp_printf.h
include/frpp/utils/: utils.h
src/: CMakeLists.txt
src/logging/: CMakeLists.txt
src/shell/: CMakeLists.txt
src/sys/: CMakeLists.txt  frpp_printf.c
tests/: CMakeLists.txt
tests/sys/: CMakeLists.txt
tests/sys/frpp_printf/: CMakeLists.txt  test_frpp_printf.c
